Add mailing list

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ Debian GNU/Linux, y por qué no, de sus distribuciones derivadas para colaborar 
 <h2>Información adicional</h2>
 <p>Por favor, lea la sección <a href="alojamiento.html">Alojamiento y viaje</a></p>
 <p>Por si alguien lo dudaba, habrá conexión a internet mediante wifi.</p>	
-<p>Si tiene alguna pregunta adicional, puede escribirnos a la lista de correo de organización del evento: dudes-organizacion@ceu.fi.udc.es</p>
-<p>La lista de correo de asistentes se encuentra en <a href="http://XX">XX</a></p>
+<p>Si tiene alguna pregunta adicional, puede escribirnos a la lista de correo de organización del evento: dudes-organizacion AT ceu.fi.udc.es</p>
+<p>La lista de correo de asistentes se encuentra en <a href="http://ceu.fi.udc.es/cgi-bin/mailman/listinfo/dudesconf-asistentes">http://ceu.fi.udc.es/cgi-bin/mailman/listinfo/dudesconf-asistentes</a></p>
 
 <h2>Patrocina</h2>
 <a href="http://www.gpul.org"><img src="images/logo_nuevogpul2.png" alt="Logo GPUL" /></a>
