--- a/cfp.html
+++ b/cfp.html
@@ -35,7 +35,7 @@
 </ul>
 </p>
 
-</p>Por favor, indicar en el asunto del correo: [DUDES]</p>
+</p>Por favor, indique en el asunto del correo: [DUDES]</p>
 
 <p>Los materiales de la presentación (diapositivas, textos, prácticas,...) deberán estar bajo una licencia libre.</p>
 
