Remove border for img

--- a/inscripcion.html
+++ b/inscripcion.html
@@ -27,7 +27,7 @@
 
 <div id="content"><h2>Inscripción</h2>
 
-<p><strong>Próximamente, permanezcan atentos a sus pantallas.</strong></p>
+<p><strong>La inscripción se abrirá próximamente, permanezcan atentos a sus pantallas.</strong></p>
 
 <!--
 <p>Para inscribirse, rellene el formulario de registro que puede encontrar en:
