--- a/programa.html
+++ b/programa.html
@@ -145,8 +145,8 @@ Versión en <a href="http://gpul.grupos.udc.es/MaKaC/conferenceTimeTable.py/pdf?
 <br />
 
 <h2>Noticias</h2>
-<p><strong>08/02/10</strong><br />Llamada a conferencias</p>
-<p><strong>08/02/10</strong><br />Se abre el proceso de inscripción para asistir</p>
+<p><strong>11/02/10</strong><br />Inicio de la web</p>
+<p><strong>11/02/10</strong><br />Llamada a conferencias</p>
 <!--<p><strong>22/4/10</strong><br />Publicado programa final</p>-->
 <br /><br /><br /><br /><br /><br /><br /><br />
 <!--<p align="center"><a href="http://validator.w3.org/check?uri=referer" target="_blank">Valid XHTML 1.0 Transitional</a><br />
