Add notice about showers

--- a/alojamiento.html
+++ b/alojamiento.html
@@ -35,7 +35,7 @@
 	<li>...</li>
 </ul>
 	
-<p>Estas instalaciones cuentan con calefacción y vestuarios con ducha.</p>
+<p>Estas instalaciones cuentan con calefacción y vestuarios con ducha compartida.</p>
 <p>Importante: esta opción será solo para las noches del del viernes al sábado y del sábado al domingo.</p>
 
 <p>Esta opción es gratis, y funcionó bastante bien en años anteriores. Aun así, si alguien prefiere pagarse un hotel, una de las opciones más económica es el <a href="http://www.hotelmaycar.com/contenido.php?idpag=3&mostrar=tarifas">Hotel Maycar</a> (incluye Wifi gratis).</p>
