--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--<div id="breadcrumbs"><a href="#">Home</a> | <a href="#">Contact</a> | <a href="#">View Cart</a></div>-->
 
         <div id="header">
-            <h1>DudesConf</h1>
+            <h1>DudesConf 3</h1>
         </div>
     </div>
 
