debconf-es -> debconf

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p>El objetivo de esta reunión es similar al del evento internacional (la DebConf): reunir a los contribudores del proyecto 
 Debian GNU/Linux, y por qué no, de sus distribuciones derivadas para colaborar juntos en el desarrollo de la distribución, así como tener la oportunidad cara a cara de intercambiar opiniones y charlar sobre el desarrollo del proyecto.</p>
 
-<p>El evento se llama DudesConf por razones históricas, puedes considerarlo como la versión nacional de la DebConf-es.</p>
+<p>El evento se llama DudesConf por razones históricas, puedes considerarlo como la versión nacional de la DebConf.</p>
 <div id="content_l">
   <h2>¿Dónde?</h2>
   <p>Facultad de Informática de la Universidad de La Coruña. Campus de Elviña.</p>
