Resize gpul logo slightly Add ghandalf's logo Make design a bit wider

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@ Debian GNU/Linux, y por qué no, de sus distribuciones derivadas para colaborar 
 <p>La lista de correo de asistentes se encuentra en <a href="http://ceu.fi.udc.es/cgi-bin/mailman/listinfo/dudesconf-asistentes">http://ceu.fi.udc.es/cgi-bin/mailman/listinfo/dudesconf-asistentes</a></p>
 
 <h2>Patrocina</h2>
+<br />
+<a href="http://www.debian.org"><img src="images/openlogo-100.png" alt="Logo Debian" /></a>
 <a href="http://www.gpul.org"><img src="images/logo_nuevogpul2.png" alt="Logo GPUL" /></a>
 <a href="http://www.igalia.com"><img src="images/logo_igalia.gif" alt="Logo Igalia" /></a>
-<a href="http://www.debian.org"><img src="images/openlogo-100.png" alt="Logo Debian" /></a>
+<a href="http://www.ghandalf.org/"><img src="images/logo_ghandalf.jpg" alt="Logo Ghandalf" /></a>
 </div>
 </div>
 <!-- ##### Left Navigation Bar ##### -->
