Better names for the fields

--- a/formulario.html
+++ b/formulario.html
@@ -40,11 +40,11 @@
 <li id="li_1" >
 		<label class="description" for="element_1">Nombre </label>
 		<span>
-			<input id="element_1_1" name= "element_1_1" class="element text" maxlength="255" size="12" value=""/>
+			<input id="nombre" name="nombre" class="element text" maxlength="255" size="12" value=""/>
 			<label>Nombre</label>
 		</span>
 		<span>
-			<input id="element_1_2" name= "element_1_2" class="element text" maxlength="255" size="27" value=""/>
+			<input id="apellidos" name="apellidos" class="element text" maxlength="255" size="27" value=""/>
 			<label>Apellidos</label>
 		</span> <p class="guidelines" id="guide_6"><small>Obligatorio, dato público a otro asistentes</small></p>
 </li>
@@ -52,28 +52,28 @@
 <li id="li_2" >
 		<label class="description" for="element_2">Email </label>
 		<div>
-			<input id="element_2" name="element_2" class="element text medium" type="text" maxlength="255" value=""/> 
+			<input id="email" name="email" class="element text medium" type="text" maxlength="255" value=""/> 
 		</div> <p class="guidelines" id="guide_6"><small>Obligatorio, dato privado</small></p>
 </li>
 
 <li id="li_3" >
 		<label class="description" for="element_3">Telefono </label>
 		<div>
-			<input id="element_3" name="element_3" class="element text medium" type="text" maxlength="255" value=""/> 
+			<input id="telefono" name="telefono" class="element text medium" type="text" maxlength="255" value=""/> 
         </div> <p class="guidelines" id="guide_6"><small>Opcional, dato privado</small></p>
 </li>
 
 <li id="li_4" >
 		<label class="description" for="element_4">Página web </label>
 		<div>
-			<input id="element_4" name="element_4" class="element text medium" type="text" maxlength="255" value="http://"/> 
+			<input id="website" name="website" class="element text medium" type="text" maxlength="255" value="http://"/> 
 		</div> <p class="guidelines" id="guide_6"><small>Opcional, dato público a otro asistentes</small></p>
 </li>
 
 <li id="li_5" >
 		<label class="description" for="element_5">¿De donde vienes? </label>
 		<div>
-			<input id="element_5" name="element_5" class="element text large" type="text" maxlength="255" value=""/> 
+			<input id="procedencia" name="procedencia" class="element text large" type="text" maxlength="255" value=""/> 
         </div> <p class="guidelines" id="guide_6"><small>Opcional, dato público a otro asistentes</small></p>
 </li>
 
@@ -82,10 +82,10 @@
 
 		<label class="description" for="element_6">Quiero dormir en el pabellón </label>
 		<span>
-			<input id="element_6_1" name="element_6_1" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_6_1">Viernes noche</label>
-<input id="element_6_2" name="element_6_2" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_6_2">Sabado noche</label>
+<input id="pabellonv" name="pabellonv" class="element checkbox" type="checkbox" value="1" />
+<label class="choice" for="pabellonv">Viernes noche</label>
+<input id="pabellons" name="pabellons" class="element checkbox" type="checkbox" value="1" />
+<label class="choice" for="pabellons">Sabado noche</label>
 
 		</span> <p class="guidelines" id="guide_6"><small>Selecciona las noches solo si quieres dormir gratis en el pabellón deportivo</small></p>
 </li>
@@ -93,31 +93,31 @@
 <li id="li_7" >
 		<label class="description" for="element_7">Tipo de comida </label>
 		<span>
-			<input id="element_7_1" name="element_7" class="element radio" type="radio" value="1" />
-<label class="choice" for="element_7_1">Omnivoro</label>
-<input id="element_7_2" name="element_7" class="element radio" type="radio" value="2" />
-<label class="choice" for="element_7_2">Vegetariano</label>
-<input id="element_7_3" name="element_7" class="element radio" type="radio" value="3" />
-<label class="choice" for="element_7_3">Vegano</label>
-<input id="element_7_4" name="element_7" class="element radio" type="radio" value="4" />
-<label class="choice" for="element_7_4">Especial (celiaco, diabetico, detallar abajo)</label>
-
+<input id="omnivora" name="omnivora" class="element radio" type="radio" value="1" />
+<label class="choice" for="omnivora">Omnivora</label>
+<input id="vegetariana" name="vegetariana" class="element radio" type="radio" value="2" />
+<label class="choice" for="vegetariana">Vegetariano</label>
+<input id="vegana" name="vegana" class="element radio" type="radio" value="3" />
+<label class="choice" for="vegana">Vegano</label>
+<input id="otras" name="otras" class="element radio" type="radio" value="4" />
+<label class="choice" for="otras">Otras (celiaco, diabetico, detallar abajo)</label>
 		</span> 
 </li>
 
 <li id="li_8" >
 		<label class="description" for="element_8">Comidas </label>
 		<span>
-			<input id="element_8_1" name="element_8_1" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_8_1">Viernes - almuerzo</label>
-<input id="element_8_2" name="element_8_2" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_8_2">Viernes - cena</label>
-<input id="element_8_3" name="element_8_3" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_8_3">Sabado - almuerzo</label>
-<input id="element_8_4" name="element_8_4" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_8_4">Sabado - cena</label>
-<input id="element_8_5" name="element_8_5" class="element checkbox" type="checkbox" value="1" />
-<label class="choice" for="element_8_5">Domingo - almuerzo</label>
+<input id="viernes_cena" name="viernes_cena" class="element checkbox" type="checkbox" value="1" />
+<label class="choice" for="viernes_cena">Viernes - cena</label>
+
+<input id="sabado_almuerzo" name="sabado_almuerzo" class="element checkbox" type="checkbox" value="1" />
+<label class="choice" for="sabado_almuerzo">Sabado - almuerzo</label>
+
+<input id="sabado_cena" name="sabado_cena" class="element checkbox" type="checkbox" value="1" />
+<label class="choice" for="sabado_cena">Sabado - cena</label>
+
+<input id="domingo_almuerzo" name="domingo_almuerzo" class="element checkbox" type="checkbox" value="1" />
+<label class="choice" for="domingo_almuerzo">Domingo - almuerzo</label>
 
 		</span><p class="guidelines" id="guide_8"><small>Selecciona las comidas que necesites</small></p> 
 </li>
@@ -125,8 +125,8 @@
 <li id="li_9" >
 		<label class="description" for="element_9">Comentarios </label>
 		<div>
-			<textarea id="element_9" name="element_9" class="element textarea medium"></textarea> 
-        </div> <p class="guidelines" id="guide_6"><small>Opcional, dato privado. ¿Hay algo que quieras comentar a la organización?</small></p>
+			<textarea id="comentarios" name="comentarios" class="element textarea medium"></textarea> 
+        </div> <p class="guidelines" id="comentarios"><small>Opcional, dato privado. ¿Hay algo que quieras comentar a la organización?</small></p>
 		</li>
 			
 					<li class="buttons">
