fix radio button for "comida"

--- a/formulario.html
+++ b/formulario.html
@@ -93,13 +93,16 @@
 <li id="li_7" >
 		<label class="description" for="element_7">Tipo de comida </label>
 		<span>
-<input id="omnivora" name="omnivora" class="element radio" type="radio" value="1" />
+<input id="omnivora" name="comida" class="element radio" type="radio" value="1" checked="checked"/>
 <label class="choice" for="omnivora">Omnivora</label>
-<input id="vegetariana" name="vegetariana" class="element radio" type="radio" value="2" />
+
+<input id="vegetariana" name="comida" class="element radio" type="radio" value="2" />
 <label class="choice" for="vegetariana">Vegetariano</label>
-<input id="vegana" name="vegana" class="element radio" type="radio" value="3" />
+
+<input id="vegana" name="comida" class="element radio" type="radio" value="3" />
 <label class="choice" for="vegana">Vegano</label>
-<input id="otras" name="otras" class="element radio" type="radio" value="4" />
+
+<input id="otras" name="comida" class="element radio" type="radio" value="4" />
 <label class="choice" for="otras">Otras (celiaco, diabetico, detallar abajo)</label>
 		</span> 
 </li>
