--- a/inscripcion.html
+++ b/inscripcion.html
@@ -29,11 +29,15 @@
 
 <p><strong>La inscripción se abrirá próximamente, permanezcan atentos a sus pantallas.</strong></p>
 
-<!--
 <p>Para inscribirse, rellene el formulario de registro que puede encontrar en:
-<a href="http://gpul.grupos.udc.es/MaKaC/conferenceDisplay.py?confId=10">http://gpul.grupos.udc.es/MaKaC/conferenceDisplay.py?confId=10</a>
+<a href="http://www.dudesconf.org/formulario.html">http://www.dudesconf.org/formulario.html</a>
 </p> 
 
+<p>Si tienes algún problema con la inscripción o quieres cambiar los datos, envia un email a ana@debian.org</p>
+
+
+
+<!--
 <h3>Notas importantes a leer ANTES del registro</h3>
 Por favor, tenga en cuenta lo siguiente:
 <ul>
