--- a/inscripcion.html
+++ b/inscripcion.html
@@ -27,11 +27,14 @@
 
 <div id="content"><h2>Inscripción</h2>
 
+<!--
 <p>Para inscribirse, rellene el formulario de registro que puede encontrar en:
 <a href="http://www.dudesconf.org/formulario.html">http://www.dudesconf.org/formulario.html</a>
 </p> 
 
-<p>Si tienes algún problema con la inscripción o quieres cambiar los datos, envia un email a ana@debian.org</p>
+-->
+<p>La inscripción ya está cerrada. Si tienes algún problema con la inscripción
+o quieres cambiar los datos, envia un email a info@gpul.org</p>
 
 
 
