--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -33,13 +33,21 @@
 -->
 
 <h2>Patrocina</h2>
+<br />
+<a href="http://www.debian.org"><img src="images/openlogo-100.png" alt="Logo Debian" /></a>
 <a href="http://www.gpul.org"><img src="images/logo_nuevogpul2.png" alt="Logo GPUL" /></a>
 <a href="http://www.igalia.com"><img src="images/logo_igalia.gif" alt="Logo Igalia" /></a>
-<a href="http://www.debian.org"><img src="images/openlogo-100.png" alt="Logo Debian" /></a>
+<a href="http://www.ghandalf.org/"><img src="images/logo_ghandalf.jpg" alt="Logo Ghandalf" /></a>
+<br />
+
+<a href="http://imit.xunta.es/portal/iMit/sxmit.html?__locale=es"><img src="images/logo_industria3.png" alt="Logo Industria Xunta" /></a>
+<a href="http://www.mancomun.org/"><img src="images/logo_mancomun2.gif" alt="Logo " Mancomun/></a>
+<a href="http://www.fic.udc.es/MainPage.do"><img src="images/escudo.gif" alt="Logo FIC" /></a>
+
+
 
 <h2>¿Desea patrocinarnos?</h2>
 <p>Si desea patrocinar este evento, por favor, escríbanos a dudes-organizacion@ceu.fi.udc.es</p>
-
 </div>
 <!-- ##### Left Navigation Bar ##### -->
 <div id="content_left">
