--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ Debian GNU/Linux, y por qué no, de sus distribuciones derivadas para colaborar 
 <a href="http://www.gpul.org"><img src="images/logo_nuevogpul2.png" alt="Logo GPUL" /></a>
 <a href="http://www.igalia.com"><img src="images/logo_igalia.gif" alt="Logo Igalia" /></a>
 <a href="http://www.ghandalf.org/"><img src="images/logo_ghandalf.jpg" alt="Logo Ghandalf" /></a>
+<br />
+
+<a href="http://imit.xunta.es/portal/iMit/sxmit.html?__locale=es"><img src="images/logo_industria3.png" alt="Logo Industria Xunta" /></a>
+<a href="http://www.mancomun.org/"><img src="images/logo_mancomun2.gif" alt="Logo " Mancomun/></a>
+<a href="http://www.fic.udc.es/MainPage.do"><img src="images/escudo.gif" alt="Logo FIC" /></a>
 </div>
 </div>
 <!-- ##### Left Navigation Bar ##### -->
