--- a/cfp.html
+++ b/cfp.html
@@ -50,7 +50,8 @@ selección.</p>
 <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="alojamiento.html">Alojamiento y viaje</a></li>
-<li><a href="cfp.html">Llamada de ponencias</a></li>
+<li><a href="programa.html">Programa</a></li>
+<!--<li><a href="cfp.html">Llamada de ponencias</a></li> -->
 <li><a href="inscripcion.html">Inscripción</a></li>
 <!--
 <li><a href="programa.html">Programa</a></li>-->
