--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ Debian GNU/Linux, y por qué no, de sus distribuciones derivadas para colaborar 
 <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="alojamiento.html">Alojamiento y viaje</a></li>
-<li><a href="cfp.html">Llamada de ponencias</a></li>
+<li><a href="programa.html">Programa</a></li>
+<!--<li><a href="cfp.html">Llamada de ponencias</a></li> -->
 <li><a href="inscripcion.html">Inscripción</a></li>
 <!--
 <li><a href="programa.html">Programa</a></li>-->
