--- a/inscripcion.html
+++ b/inscripcion.html
@@ -65,7 +65,8 @@ Por favor, tenga en cuenta lo siguiente:
 <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="alojamiento.html">Alojamiento y viaje</a></li>
-<li><a href="cfp.html">Llamada de ponencias</a></li>
+<li><a href="programa.html">Programa</a></li>
+<!--<li><a href="cfp.html">Llamada de ponencias</a></li> -->
 <li><a href="inscripcion.html">Inscripción</a></li>
 <!--
 <li><a href="programa.html">Programa</a></li>-->
