--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -55,7 +55,8 @@
 <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="alojamiento.html">Alojamiento y viaje</a></li>
-<li><a href="cfp.html">Llamada de ponencias</a></li>
+<li><a href="programa.html">Programa</a></li>
+<!--<li><a href="cfp.html">Llamada de ponencias</a></li> -->
 <li><a href="inscripcion.html">Inscripción</a></li>
 <!--
 <li><a href="programa.html">Programa</a></li>-->
