--- a/programa.html
+++ b/programa.html
@@ -25,103 +25,51 @@
 <!-- ##### Textual Content Area ##### -->
 <div id="content_wrapper">
 
-<div id="content"><h2>Programa</h2>
-<p>
-Programa del evento: <a href="http://gpul.grupos.udc.es/MaKaC/conferenceTimeTable.py?confId=10">http://gpul.grupos.udc.es/MaKaC/conferenceTimeTable.py?confId=1</a>
-</p>
-<p>
-Versión en <a href="http://gpul.grupos.udc.es/MaKaC/conferenceTimeTable.py/pdf?confId=10">PDF con el mini abstract de las charlas</a>.
-</p>
-<h2>Material</h2>
-(Vídeos y fotos bajo licencia <i>Creative Commons Attribution 3.0 Unported</i>
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/">
-<img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" />
-</a>)
-<div class="hemi">Liberando La Fonera</div>
-<div class="hby">por Santiago G. Mantiñan</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_fonera_LO.ogg" title="132M 320x240 564Kbps ogg theora MD5:6d44dec04b55ead2895d0f3d420b0514">lo</a>
-<a href="videos/2008_DUDES_fonera_HI.ogg" title="189M 640x480 ogg theora MD5:ed4503c1f5577b459806a4a2eb512b35">hi</a>
-<a href="videos/2008_DUDES_fonera.mpeg" title="862M 720x576 mpeg MD5:2228186a4b80dc9b5c688ff79110c4c7">dvd</a>
-</div>
-<div class="hsubemi">presentación:
-<a href="doc/2008_DUDES_fonera" title="Presentación en HTML">html</a>
-</div>
-<div class="hemi">Git: una visita guiada</div>
+<div id="content">
+
+<h2>Viernes</h2>
+
+
+<div class="hemi">16:00 Introducción al empaquetamiento de Debian</div>
+<div class="hby">por José Manuel Santamaría Lema</div>
+
+<div class="hemi">18:00 BOF: Cómo colaborar en Debian y no morir en el intento</div>
+<div class="hby">por Hector Orón</div>
+
+<div class="hemi">20:00 Yo uso Git porque farda más y mejor </div>
 <div class="hby">por Adeodato Simó</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_git_LO.ogg" title="127M 320x240 564Kbps ogg theora MD5:5d5be7f478f4c8442fd43c6d8616fda4">lo</a>
-<a href="videos/2008_DUDES_git_HI.ogg" title="169M 640x480 ogg theora MD5:b2d3829f0a73861a4536bf502283eb03">hi</a>
-<a href="videos/2008_DUDES_git.mpeg" title="762M 720x576 mpeg MD5:ab39a35f6a79e7ee35e7218c6264789a">dvd</a>
-</div>
-<div class="hsubemi">presentación:
-<a href="doc/2008_DUDES_git.tpp" title="Presentación en Text Presentation Program">tpp</a>
-</div>
-<div class="hemi">BOF: GNU y Debian, coincidencias, desavenencias, intereses comunes</div>
-<div class="hby">por Juan Antonio Añel</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_gnudebian_LO.ogg" title="72M 320x240 564Kbps ogg theora MD5:ea345ca8b6fb43fbced9027087139cb8">lo</a>
-<a href="videos/2008_DUDES_gnudebian_HI.ogg" title="109M 640x480 ogg theora MD5:b67816e92d83d4aebb19cda9c1257c96">hi</a>
-<a href="videos/2008_DUDES_gnudebian.mpeg" title="465M 720x576 mpeg MD5:5678037ec86529a780c25bacf52631be">dvd</a>
-</div>
-<div class="hemi">Vim on Rails (Charla + Taller)</div>
-<div class="hby">por Pancho Horrillo y Miguel Gea</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_vimonrails_LO.ogg" title="611M 320x240 564Kbps ogg theora MD5:c07d18ca043ad1f1c70fcd9e51c4ba67">lo</a>
-<a href="videos/2008_DUDES_vimonrails_HI.ogg" title="841M 640x480 ogg theora MD5:565a8fa39cbbadcf886af2dcfe2c45ab">hi</a>
-<a href="videos/2008_DUDES_vimonrails.mpeg" title="5.6G 720x576 mpeg MD5:205bce0457b1eec0e05dcb257f08e331">dvd</a>
-</div>
-<div class="hsubemi">presentación:
-<a href="doc/2008_DUDES_vimtalk.txt" title="Índice, ideas, recursos y demás">txt</a>
-<a href="doc/2008_DUDES_vim.tgz" title="Resto de cosas, entre ellas la presentación">tgz</a>
-<a href="http://tnerual.eriogerg.free.fr/vim.html" title="vim quick reference card">refcard</a>
-</div>
-<div class="hemi">Mini Talk: Intimando con grep-dctrl</div>
-<div class="hby">por Adeodato Simó</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_grepdctrl_LO.ogg" title="63M 320x240 564Kbps ogg theora MD5:01b03253740e15f4ea2433fa89838eec">lo</a>
-<a href="videos/2008_DUDES_grepdctrl_HI.ogg" title="95M 640x480 ogg theora MD5:9de718ed1a4029d13f125c5fb50fdb37">hi</a>
-<a href="videos/2008_DUDES_grepdctrl.mpeg" title="620M 720x576 mpeg MD5:4c64d1d33f61b6e79c8c2cdae998cf9c">dvd</a>
-</div>
-<div class="hsubemi">presentación:
-<a href="doc/2008_DUDES_grepdctrl.tpp" title="Presentación en Text Presentation Program">tpp</a>
-</div>
-<div class="hemi">Mini Talk: Machine Parsable Debian Copyright</div>
-<div class="hby">por Ricardo Mones</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_mpcf_LO.ogg" title="54M 320x240 564Kbps ogg theora MD5:d0e4829c48e7390f86b73775ff9e5a2b">lo</a>
-<a href="videos/2008_DUDES_mpcf_HI.ogg" title="79M 640x480 ogg theora MD5:ff80c4595023841f6bf868ac00edcfe8">hi</a>
-<a href="videos/2008_DUDES_mpcf.mpeg" title="512M 720x576 mpeg MD5:50f2b0b3bdae2a350a9cc7af834ebff9">dvd</a>
-</div>
-<div class="hsubemi">presentación:
-<a href="doc/2008_DUDES_mpcf_es.pdf" title="Presentación en PDF en castellano">pdf-es</a>
-<a href="doc/2008_DUDES_mpcf_es.tex" title="LaTeX de la presentación en castellano">latex-es</a>
-<a href="doc/2008_DUDES_mpcf_en.pdf" title="PDF presentation in English">pdf-en</a>
-<a href="doc/2008_DUDES_mpcf_en.tex" title="LaTeX of English presentation">latex-en</a>
-</div>
-<div class="hemi">Debian: Trabajando con personas</div>
-<div class="hby">por Míriam Ruíz</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_personas_LO.ogg" title="282M 320x240 564Kbps ogg theora MD5:1db63135caf54661d6c91a542f35cb8f">lo</a>
-<a href="videos/2008_DUDES_personas_HI.ogg" title="406M 640x480 ogg theora MD5:71c4dd2f13fe6a2fa9f40e4d13bc5891">hi</a>
-<a href="videos/2008_DUDES_personas.mpeg" title="1.9G 720x576 mpeg MD5:627aeb7af011f2286657f23028f34fe6">dvd</a>
-</div>
-<div class="hsubemi">presentación:
-<a href="doc/2008_DUDES_personas.odp" title="Presentación en OpenDocument en castellano">odp</a>
-</div>
-<div class="hemi">Debian Quiz</div>
-<div class="hby">por Adeodato Simó e Isaac Clerencia</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_debianquiz_LO.ogg" title="117M 320x240 564Kbps ogg theora MD5:e667287653a9633f1f1bad321f0a547f">lo</a>
-<a href="videos/2008_DUDES_debianquiz_HI.ogg" title="313M 640x480 ogg theora MD5:21b5b48d31c0e93874b3d34fdfc4b9c0">hi</a>
-<a href="videos/2008_DUDES_debianquiz.mpeg" title="1.2G 720x576 mpeg MD5:2c0dc89b45a7734a4761323597d3e38a">dvd</a>
-</div>
-<div class="hemi">Queimada</div>
-<div class="hsubemi">vídeo:
-<a href="videos/2008_DUDES_queimada_LO.ogg" title="53M 320x240 564Kbps ogg theora MD5:cd8eeed09ec141a152fe6255deee2449">lo</a>
-<a href="videos/2008_DUDES_queimada_HI.ogg" title="85M 640x480 ogg theora MD5:7e7ed6ca4131f69815557e03b11fa674">hi</a>
-<a href="videos/2008_DUDES_queimada.mpeg" title="251M 720x576 mpeg MD5:4337f25e4f6438229ed0b7cadb10b187">dvd</a>
-</div>
+
+
+<h2>Sabado</h2>
+
+<div class="hemi">10:00 OpenStreetMap</div>
+<div class="hby">por Celso González </div>
+
+<div class="hemi">11:00 Un paseo por Emacs</div>
+<div class="hby">por (Al)berto Garcia</div>
+
+<div class="hemi">11:00 Mapping party</div>
+<div class="hby">por Iván Sanchez</div>
+
+
+<div class="hemi">16:00 El Software libre al amparo de la legislación vigente en España</div>
+<div class="hby">por Silvia Álvarez</div>
+
+<div class="hemi">18:00 Tartas DFSG-compatibles (Aplicar DFSG a lo que no es software)</div>
+<div class="hby">por Iván Sanchez Ortega</div>
+
+<div class="hemi">19:30 Debian y Web Semántica</div>
+<div class="hby">por Nacho Barrientos Arias </div>
+
+
+<h2>Domingo</h2>
+
+<div class="hemi">10:00 Embedded Debian: pasado, presente y futuro</div>
+<div class="hby">por Hector Orón</div>
+
+<div class="hemi">12:30 Debian Blends</div>
+<div class="hby">por Andreas Tille </div>
+
 </div>
 </div>
 <!-- ##### Left Navigation Bar ##### -->
@@ -130,7 +78,8 @@ Versión en <a href="http://gpul.grupos.udc.es/MaKaC/conferenceTimeTable.py/pdf?
 <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="alojamiento.html">Alojamiento y viaje</a></li>
-<li><a href="cfp.html">Llamada de ponencias</a></li>
+<li><a href="programa.html">Programa</a></li>
+<!--<li><a href="cfp.html">Llamada de ponencias</a></li> -->
 <li><a href="inscripcion.html">Inscripción</a></li>
 <!--
 <li><a href="programa.html">Programa</a></li>-->
